# EduCreate

./: #AUGMENT-QUICK-REFERENCE.md  #AUGMENT-TOOLS-REFERENCE.md  .ai-chrome-reminder  .augmentignore  .augmentrulesimportedrulesmcp-feedback-collector.md  .env  .env.development  .env.example  .env.local.backup  .env.neon  .env.prod.example  .env.production  .env.sentry  .env.vercel.production  .env.vercel.template  .gitignore  .vercelignore  8-agents-wordwall-project-launch.md  ACTION_PLAN_NEXT_STEPS.md  ADAPTIVE_CARD_SIZE_DESIGN.md  ADAPTIVE_IMPLEMENTATION_CODE.md  ADVANCED_DEVICE_CLASSIFICATION_SYSTEM.js  AGENT_HANDOVER_DOCUMENT.md  AIRPLANE_COLLISION_GAME_DELIVERY_PACKAGE.md  ANALYSIS_SUMMARY.md  ANALYSIS_混合模式保存舊有邏輯.md  ANSWER_VALIDATION_AND_SCORING_GUIDE.md  ANSWER_VALIDATION_IMPLEMENTATION_SUMMARY.md  API_FIX_REPORT.md  ARCHITECTURE_SIMPLIFICATION_PLAN.md  AUDIO_AND_IMAGE_FIX_SUMMARY_V44.md  AUDIO_COMPLETE_FIX_SUMMARY.md  AUDIO_FEATURE_HANDOVER.md  AUDIO_FEATURE_QUICK_START.md  AUDIO_FIX_FINAL_SUMMARY.md  AUDIO_GENERATION_FIX_HANDOVER.md  AUDIO_OPTION_BUG_DIAGNOSIS.md  AUDIO_PLAYBACK_FIX.md  AUDIO_QUICK_REFERENCE.md  AUGMENT_ENHANCEMENT_GUIDE.md  (+1061 more)
.augment/: sentry-mcp-config.json
.ssh/: config
.trae/: mcp.json
EduCreate-CanyonRunner-Integration/: PHASER-2-TO-3-API-MIGRATION-GUIDE.md  PHASER-3-UPGRADE-MASTER-PLAN.md  WEBPACK-VS-VITE-ANALYSIS-2025.md
EduCreate-Test-Videos/: DOCUMENTATION-INDEX.md  EFFICIENT_PROBLEM_SOLVING_WORKFLOW.md  MY-WORKFLOW.md  PHASER3-CROSS-CONVERSATION-LEARNING-GUIDE.md  PHASER3-VERIFIED-SUCCESS-SYSTEM.md  README.md  RESPONSIVE-TESTING-QUICK-GUIDE.md  RULE4-REMINDER.md  USAGE.md
__tests__/: optimization.test.ts
app/: layout.tsx  page.tsx
augment_memory_data/: memories.json  preferences.json  stats.json
collision-analysis-screenshots/: analysis-report.json
components/: AIContentGenerator.tsx  ContentManager.tsx  DataVisualization.tsx  ErrorBoundary.tsx  FeedbackAnalyzer.tsx  Layout.tsx  Leaderboard.tsx  MobileOptimizer.tsx  Navigation.tsx  OptimizedActivityList.tsx  OptimizedImage.tsx  PerformanceDashboard.tsx  PerformanceOptimizer.tsx  PixiGame.backup.tsx  PixiGame.tsx  ProtectedRoute.tsx  ShareActivity.tsx  ShareModal.tsx  SubscriptionPrompt.tsx  SystemOptimizer.tsx  ThemeConfigurator.tsx  UserMenu.tsx  UserTestingSystem.tsx
data/: wordwall-templates.ts
demo_downloads/: course_data.json  sample_document.txt  student_feedback.csv
deployment/: memory-enhancement-deployment.md
diagnostics/: http-3002.json
docs/: 01-project-overview.md  02-technical-architecture.md  03-database-design.md  ACTIVITY_TOOLBAR_IMPLEMENTATION_REPORT.md  ADD_SOUND_BUTTON_IN_INPUT_FIELDS_TEST_REPORT.md  ADD_SOUND_FEATURE_IMPLEMENTATION_REPORT.md  API_DOCUMENTATION.md  API_MIGRATION_GUIDE.md  AUGMENT-OPERATION-EXAMPLES.md  AUGMENT-QUICK-COMMANDS.md  BUTTON_VISIBILITY_LOGIC_TEST_REPORT.md  CDP-DOCUMENTATION-INDEX.md  CDP-QUICK-REFERENCE.md  CDP-RESPONSIVELY-DEBUG-GUIDE.md  CDP-RESPONSIVELY-GUIDE.md  CDP-TECHNICAL-DEEP-DIVE.md  CI-CD-INTEGRATION-GUIDE.md  COMMUNITY_FEATURE_FRONTEND_IMPLEMENTATION.md  COMMUNITY_FEATURE_IMPLEMENTATION_PLAN.md  COMMUNITY_FEATURE_IMPLEMENTATION_TIMELINE.md  COMPLETE-CDP-SOLUTION.md  COMPLETE_VIDEO_EVIDENCE_REPORT.md  COORDINATE-FIX-EXPLANATION.md  CRITICAL_ANALYSIS_AND_IMPROVEMENTS.md  DATABASE_ARCHITECTURE.md  DATABASE_INVESTIGATION_SUMMARY.md  DATA_LOSS_INVESTIGATION.md  DATA_RECOVERY_INVESTIGATION.md  DEBUGGING_GUIDE_USEEFFECT_INFINITE_LOOP.md  DEMO_LOGIN_ISSUE_ANALYSIS.md  DEPLOYMENT_ERROR_FIX_ANALYSIS.md  DEVELOPMENT_REFERENCE_GUIDE.md  DOCUMENTATION_INTEGRATION_GUIDE.md  DOWNLOAD_OFFICIAL_WORD_LISTS_GUIDE.md  E2E_TEST_RESULTS_DEMO_LOGIN_ISSUE.md  EDUCREATE_ARCHITECTURE_ANALYSIS.md  EDUCREATE_MULTILINGUAL_TTS_COST_ANALYSIS.md  EDUCREATE_TTS_COST_STRATEGY_UPDATED.md  EDUCREATE_TTS_IMPLEMENTATION_PLAN.md  EDUCREAT_COMPREHENSIVE_ANALYSIS_AND_ROADMAP.md  (+230 more)
error-collision-flash-screenshots/: error-collision-test-report.json
examples/: search-example.tsx
fifth-error-flash-screenshots/: fifth-error-test-report.json
flicker-fix-test-screenshots/: fix-test-report.json
games/: README.md
hooks/: useErrorHandler.ts  useIPadConfig.ts  useKeyboardShortcuts.ts  useKeyboardShortcuts.tsx  useLearningAnalytics.ts  useMatchUpIPadConfig.ts  useOptimisticUpdate.ts  usePermission.ts  useRealtimeCollaboration.ts  useScreenshotUpdates.ts  useSubscription.ts  useTTS.ts
iframe-reload-test-screenshots/: iframe-reload-report.json
lib/: api-client.ts  apiRoutes.ts  auth-middleware.ts  auth-supabase.ts  auth.ts  cdn-config.ts  dynamicImport.ts  email.ts  errorHandler.ts  fetch.ts  h5p.ts  image-text-overlay.ts  imageGenerator.ts  logger.ts  mock-db.ts  networkMonitor.ts  openai.ts  permissions.ts  prisma.ts  pusher.ts  redis.ts  sentry.ts  supabase.ts  webVitals.ts
local-memory/: improvement-tracking.json  (+1 more)
public/: sw.js  (+8 more)
wordwall-clone/enhanced-mcp-feedback-collector/: PROJECT_SUMMARY.md  README.md  demo.py  example_usage.py  install.py  pyproject.toml  test_enhanced_mcp.py
wordwall-clone/enhanced-mcp-feedback-collector/src/mcp_feedback_collector/: __init__.py  enhanced_server.py
wordwall-clone/mcp-video-feedback-collector/: README.md  install_mcp.py  pyproject.toml  test_mcp_server.py
wordwall-clone/mcp-video-feedback-collector/src/mcp_video_feedback_collector/: __init__.py  server.py
(+2112 files in other folders)
