[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-mcp-feedback-collector"
version = "1.0.0"
description = "增強版交互式反馈收集器 MCP 服务器，支持文本、图片和影片反馈"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Enhanced MCP Team", email = "enhanced@mcp.dev"}
]
keywords = ["mcp", "feedback", "interactive", "video", "image", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "mcp>=1.0.0",
    "pillow>=9.0.0",
    "fastmcp>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0"
]

video = [
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "ffmpeg-python>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/enhanced-mcp/enhanced-mcp-feedback-collector"
Repository = "https://github.com/enhanced-mcp/enhanced-mcp-feedback-collector"
Documentation = "https://github.com/enhanced-mcp/enhanced-mcp-feedback-collector#readme"
"Bug Tracker" = "https://github.com/enhanced-mcp/enhanced-mcp-feedback-collector/issues"

[project.scripts]
enhanced-mcp-feedback-collector = "mcp_feedback_collector.enhanced_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mcp_feedback_collector"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "PIL.*",
    "tkinter.*",
    "mcp.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
